responsive layout breakpoint fix

--- a/src/components/screen-header/styles.module.less
+++ b/src/components/screen-header/styles.module.less
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   .header {
     padding-left: 32px;
   }
